@@ -64,3 +64,59 @@
 		- 资源释放操作
 
 - STW
+	- GC时会让程序停顿，整个系统会进入卡死状态。
+	- 参考StopTheWorldTest.java、StopTheWorldTest2.java
+	
+- 垃圾回收器
+	- 串行回收器 SerialGC
+		- 单线程进行垃圾回收
+		- 独占式的垃圾回收
+		- 会产生STW
+		- 逻辑简单，没有线程切换的开销，适合在硬件条件差的场合
+		- -XX:+UseSerialGC 新生代老年代都使用串行回收器，client模式下的默认收集器
+		- 新生代中串行回收器用的是复制算法，老年代用的是标记压缩法
+	- 并行回收器 ParNewGC
+		- 多线程串行回收器
+		- 算法和新生代串行回收器一致
+		- 多核情况下，性能优于串行回收器，单核情况下反而不如
+		- -XX:+UseParNewGC 新生代使用ParNew回收器，来年代使用串行回收器
+		- -XX:ParallelGCThreads 执行垃圾回收的线程数量，一般当CPU小于8核时对应核数，超过则等于3+5*CPU/8
+	- ParallelGC回收器
+		- 使用复制算法
+		- 多线程、独占式
+		- 关注吞吐量
+		- -XX:+UseParallelGC 新生代使用ParallelGC回收器，老年代使用串行回收器
+		- -XX:MaxPauseMillis 最大垃圾收集停顿时间，由于ParallelGC会根据设定时间来调整堆大小来适应，所以过小的数值可能反而会降低系统的吞吐量
+		- -XX:GCTimeRatio 吞吐量大小，0-100整数，假设值为n，系统将不超过1/(1+n)的时间用于垃圾收集
+		- -XX:+UseAdaptiveSizePolicy 虚拟机自行调节eden/s0/s1/老年代的大小、晋升老年代的次数等，自动调优策略。
+		- ParallelOldGC回收器
+			- 使用标记压缩算法
+			- 关注吞吐量
+			- -XX:+UseParallelOldGC 新生代使用ParallelGC回收器，老年代使用ParallelOldGC回收器
+	- CMS
+		- 多线程并行
+		- 非独占式
+		- 使用标记清除算法
+		- 关注系统停顿时间
+		- 流程 
+			- 初始标记 STW标记根对象
+			- 并发标记 标记所有对象
+			- 预清理 清理前准备以及控制停顿时间
+			- 重新标记 STW修正并发标记数据
+			- 并发清理
+			- 并发重置
+		- 并发标记、并发清理、并发重置都是可以和应用一起执行的
+		- -XX:-CMSPrecleaningEnabled 不使用预清理
+		- 预清理会根据历史性能数据来预测下一次新生代GC发生的时间，并尽量在当前时间和预测时间的中间点进行重新标记，以尽量避免新生代GC和重新标记阶段的重合。减少一次停顿锁需要的时间。
+		- -XX:+UseConcMarkSweepGC 新生代使用ParNew回收器，老年代使用CMS
+		- CMS的默认线程数是(ParallelGCThreads +3)/4
+		- -XX:ConcGCThreads 设定CMS并发线程数
+		- -XX:ParallelCMSThreads 同上
+		- 由于CMS的执行原理导致无法确保回收时内存不增长，所以不会等待堆内存饱和才进行垃圾回，而是根据设定的阈值进行回收。
+		- -XX:CMSInitiatingOccupancyFraction CMS回收时老年代占用阈值，默认68
+		- 如果达到阈值触发回收，回收过程中出现内存不足，则取消该次CMS回收，切换成备用的串行回收。
+		- 可根据实际系统的内存增长速度来调整XX:CMSInitiatingOccupancyFraction，阈值和增长速度呈反比，起到性能调优的目的。
+		- -XX:+UseCMSCompactAtFullCollection CMS完成后，进行一次内存整理，非并发。
+		- -XX:+CMSFullGCsBeforeCompaction 指定次数的CMS回收后，进行一次内存整理。
+		- -XX:+CMSClassUnloadingEnabled 开启使用CMS回收Perm区Class数据的功能
+		
